# avf-qr

./: Cargo.toml  Info.ext  README.md
src/: delegate.rs  image_delegate.rs  main.rs  utils.rs  vision_delegate.rs
